[package]
name = "iroh-tor"
version = "0.1.0"
edition = "2024"

[dependencies]
torut = "0.2"
tokio = { version = "1", features = ["full"] }
iroh = { git = "https://github.com/n0-computer/iroh", branch = "feat-user-transport-2" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ed25519-dalek = { version = "2", features = ["hazmat"] }
rand = "0.9"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tokio-socks = "0.5"
