[package]
name = "iroh-tor"
version = "0.1.0"
edition = "2024"
description = "Tor hidden service transport for iroh"
license = "MIT OR Apache-2.0"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>", "n0 team"]
repository = "https://github.com/n0-computer/iroh-tor"
keywords = ["iroh", "tor", "onion", "p2p", "networking"]

[dependencies]
torut = "0.2"
tokio = { version = "1", features = ["full"] }
iroh = { path = "../iroh/iroh" }
n0-error = "0.1"
bytes = "1"
iroh-base = { path = "../iroh/iroh-base" }
n0-watcher = "0.6"
n0-future = "0.3"
quinn-udp = { package = "iroh-quinn-udp", version = "0.7" }
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
data-encoding = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ed25519-dalek = { version = "2", features = ["hazmat"] }
rand = "0.9"
sha2 = "0.10"
tokio-socks = "0.5"

[dev-dependencies]
anyhow = "1"
tokio-test = "0.4"
